iptables.rules
# Generated by iptables-save v1.4.21 on Sat May  7 03:29:27 2016
*filter
# Drop everything on the INPUT chain. This makes it so if iptables gets flushed it will lock everything down for safety reasons.
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [27:2435]
# Accept everythign on the loopback
-A INPUT -i lo -j ACCEPT
# Accept established the related connections from everyone
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# Accept SSH from home IP
#-A INPUT -s INSERT.YOUR.IP.HERE -p tcp -m tcp --dport 22 -j ACCEPT
# Accept HTTP and HTTPS requests
-A INPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
# ALTWFC ports
-A INPUT -p tcp -m multiport --dports 9009,27500,29900,29901,29920,27900,28910,27901,9000,9002,8000,9001 -j ACCEPT
# Allow DNS
-A INPUT -p udp -m udp --dport 53 -j ACCEPT
# More fancy DNS rules
-A INPUT -m state --state NEW -m tcp -p tcp --dport 53 -j ACCEPT
# More fancy DNS rules
-A INPUT -m state --state NEW -m udp -p udp --dport 53 -j ACCEPT
# Kitchen Sink entries below give full access to all server ports
-A INPUT -s 10.0.0.0/8 -j ACCEPT
-A INPUT -s 127.0.0.0/8 -j ACCEPT
# The 172 subnet leaves a security hole on Amazon EC2 so disable it there
#-A INPUT -s 172.16.0.0/12 -j ACCEPT
-A INPUT -s 192.168.0.0/16 -j ACCEPT
# Drop everything after this point
-A INPUT -j DROP
COMMIT
# Completed on Sat May  7 03:29:27 2016
